from enum import Enum


class Roles(str, Enum):
  user = "user"  # user heißen user
  admin = "admin"  # admins heißen admin
